Update default code block styles and add instructions for deployment

--- a/templates/default.html
+++ b/templates/default.html
@@ -41,6 +41,11 @@
         font-size: 1.5rem;
       }
 
+      code {
+        font-style: italic;
+        background-color: lightgrey;
+      }
+
       nav {
         flex-shrink: 0;
         width: 250px;
