--- a/templates/simple.html
+++ b/templates/simple.html
@@ -8,6 +8,10 @@
     <title></title>
   </head>
   <body>
+    <script type="module">
+      import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
+      mermaid.initialize({ startOnLoad: true });
+    </script>
     <nav>{{{navigation}}}</nav>
     <main>{{{content}}}</main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
