--- a/templates/bootstrap.html
+++ b/templates/bootstrap.html
@@ -3,31 +3,118 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css" />
-    <title></title>
+    <style>
+      /* remove accordion blue outline and bg during focus */
+      .accordion {
+        --bs-accordion-btn-focus-box-shadow: none;
+        --bs-accordion-btn-focus-border-color: transparent;
+        --bs-accordion-active-bg: transparent;
+      }
+
+      /* basic nav styling */
+      nav ul {
+        list-style-type: square;
+      }
+
+      nav a,
+      nav a:visited,
+      nav a:hover,
+      nav a:active {
+        text-decoration: none;
+      }
+
+      nav a:hover,
+      nav a:active {
+        color: red;
+      }
+
+      /* scroll to top styling */
+      #btnScrollToTop {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        display: none;
+      }
+    </style>
+    <script>
+      // handle bootstrap color scheme
+      const setColorScheme = (theme) => document.getElementsByTagName("html")[0].setAttribute("data-bs-theme", theme);
+      if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
+        setColorScheme("dark");
+      }
+      window.matchMedia("(prefers-color-scheme: dark)").addEventListener("change", event => {
+        setColorScheme(event.matches ? "dark" : "light");
+      });
+    </script>
+
+    <title>{{{title}}}</title>
   </head>
   <body>
+    <!-- some initialization logic -->
     <script type="module">
+      // handle mermaid renderer
       import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
       mermaid.initialize({ startOnLoad: true });
     </script>
-    <div class="accordion" id="accordionNav">
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseBody">
-            Navigation
-          </button>
-        </h2>
-        <div id="collapseBody" class="accordion-collapse collapse" data-bs-parent="#accordionNav">
-          <div class="accordion-body">
-            <nav>{{{navigation}}}</nav>
+
+    <!-- navigation offcanvas -->
+    <button class="btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#navOffcanvas">
+      <!-- hamburger -->
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+        <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
+      </svg>
+    </button>
+    <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="navOffcanvas">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title">Navigation</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
+      </div>
+      <div class="offcanvas-body">
+        <nav>{{{navigation}}}</nav>
+      </div>
+    </div>
+
+    <!-- scroll to top -->
+    <button type="button" class="btn btn-danger" id="btnScrollToTop">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up" viewBox="0 0 16 16">
+        <path fill-rule="evenodd" d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5"/>
+      </svg>
+    </button>
+
+    <!-- markdown content -->
+    <main class="container p-3">
+      <div class="accordion accordion-flush" id="accordionToc">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseBody"></button>
+          </h2>
+          <div id="collapseBody" class="accordion-collapse collapse" data-bs-parent="#accordionToc">
+            <div class="accordion-body">
+              <h1>Table of Contents</h1>
+              <nav>{{{toc}}}</nav>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <main class="container p-3">{{{content}}}</main>
+      <article>{{{content}}}<article>
+    </main>
+
+    <!-- other scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+    <script>
+      // handle scroll to top logic
+      const btnScrollToTop = document.getElementById("btnScrollToTop");
+      window.onscroll = () => {
+        btnScrollToTop.style.display = (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) ? "block" : "none";
+      }
+      btnScrollToTop.onclick = () => {
+        document.body.scrollTop = 0;
+        document.documentElement.scrollTop = 0;
+      };
+    </script>
   </body>
 </html>
