--- a/templates/bootstrap.html
+++ b/templates/bootstrap.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css" />
     <style>
       /* remove accordion blue outline and bg during focus */
@@ -45,7 +50,7 @@
       if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
         setColorScheme("dark");
       }
-      window.matchMedia("(prefers-color-scheme: dark)").addEventListener("change", event => {
+      window.matchMedia("(prefers-color-scheme: dark)").addEventListener("change", (event) => {
         setColorScheme(event.matches ? "dark" : "light");
       });
     </script>
@@ -56,7 +61,7 @@
     <!-- some initialization logic -->
     <script type="module">
       // handle mermaid renderer
-      import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
+      import mermaid from "https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs";
       mermaid.initialize({ startOnLoad: true });
     </script>
 
@@ -64,18 +69,37 @@
     <nav class="navbar justify-content-between">
       <button class="btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#navOffcanvas">
         <!-- hamburger -->
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
-          <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="16"
+          height="16"
+          fill="currentColor"
+          class="bi bi-list"
+          viewBox="0 0 16 16"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"
+          />
         </svg>
       </button>
       <button class="btn" type="button" data-bs-toggle="modal" data-bs-target="#searchModal">
         <!-- search -->
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-          <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="16"
+          height="16"
+          fill="currentColor"
+          class="bi bi-search"
+          viewBox="0 0 16 16"
+        >
+          <path
+            d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"
+          />
         </svg>
       </button>
     </nav>
-    
+
     <!-- navigation offcanvas -->
     <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="navOffcanvas">
       <div class="offcanvas-header">
@@ -92,7 +116,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <input type="text" class="form-control" placeholder="What do you want to search?" id="inputSearch">
+            <input type="text" class="form-control" placeholder="What do you want to search?" id="inputSearch" />
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
@@ -104,8 +128,18 @@
 
     <!-- scroll to top -->
     <button type="button" class="btn btn-danger" id="btnScrollToTop">
-      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up" viewBox="0 0 16 16">
-        <path fill-rule="evenodd" d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5"/>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="16"
+        height="16"
+        fill="currentColor"
+        class="bi bi-arrow-up"
+        viewBox="0 0 16 16"
+      >
+        <path
+          fill-rule="evenodd"
+          d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5"
+        />
       </svg>
     </button>
 
@@ -114,7 +148,12 @@
       <div class="accordion accordion-flush" id="accordionToc">
         <div class="accordion-item">
           <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseBody"></button>
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#collapseBody"
+            ></button>
           </h2>
           <div id="collapseBody" class="accordion-collapse collapse" data-bs-parent="#accordionToc">
             <div class="accordion-body">
@@ -124,35 +163,40 @@
           </div>
         </div>
       </div>
-      <article>{{{content}}}<article>
+      <article>{{{content}}}</article>
     </main>
 
     <!-- other scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     <script type="module">
-      import Fuse from "https://cdn.jsdelivr.net/npm/fuse.js@7.0.0/dist/fuse.mjs"
+      import Fuse from "https://cdn.jsdelivr.net/npm/fuse.js@7.0.0/dist/fuse.mjs";
 
       // handle search
       const inputSearch = document.getElementById("inputSearch");
       const containerSearch = document.getElementById("searchResults");
 
       inputSearch.onchange = async () => {
-        const searchJsonPath = "{{{base_dir}}}".length === 0 ? "/search.json" : "/{{{base_dir}}}/search.json"; // is this right?
+        const searchJsonPath = "{{{link_prefix}}}".length === 0 ? "/search.json" : "/{{{link_prefix}}}/search.json"; // is this right?
         const searchResponse = await fetch(searchJsonPath);
         const rawSearchData = await searchResponse.text();
-        const searchData = JSON.parse(rawSearchData)
+        const searchData = JSON.parse(rawSearchData);
         const fuse = new Fuse(searchData, {
           keys: ["title", "content"],
           threshold: 0.4,
-          caseSensitive: false
+          caseSensitive: false,
         });
 
         const results = fuse.search(inputSearch.value);
         containerSearch.innerHTML = "";
         for (const item of results) {
           const containerSearchResultItem = document.createElement("div");
-          const searchResultLink = "{{{base_dir}}}".length === 0 ? item?.item.link : `/{{{base_dir}}}/${item?.item.link}`; // is this right?
+          const searchResultLink =
+            "{{{link_prefix}}}".length === 0 ? item?.item.link : `/{{{link_prefix}}}/${item?.item.link}`; // is this right?
           containerSearchResultItem.innerHTML = `
             <div class="card">
               <div class="card-body">
@@ -169,11 +213,12 @@
           containerSearch.appendChild(containerSearchResultItem);
         }
       };
-      
+
       // handle scroll to top logic
       const btnScrollToTop = document.getElementById("btnScrollToTop");
       window.onscroll = () => {
-        btnScrollToTop.style.display = (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) ? "block" : "none";
+        btnScrollToTop.style.display =
+          document.body.scrollTop > 20 || document.documentElement.scrollTop > 20 ? "block" : "none";
       };
       btnScrollToTop.onclick = () => {
         document.body.scrollTop = 0;
